--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "glob": "7.1.4"
   },
   "dependencies": {
-    "pug-cli": "1.0.0-alpha6",
+    "pug-cli": "1.0.0-alpha6"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
