--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
     "@types/jquery": "3.3.31",
     "vue-template-compiler": "2.6.10",
     "jsdom": "15.1.1",
-    "glob": "7.1.4"
-  },
-  "dependencies": {
+    "glob": "7.1.4",
     "pug-cli": "1.0.0-alpha6"
   },
   "scripts": {
