--- a/folder/package.json
+++ b/folder/package.json
@@ -4,8 +4,12 @@
   "description": "Typescript library based on vue.js, typescri[t and some utility classes",
   "main": "index.js",
   "devDependencies": {
-    "one": "file:./folder",
-    "two": "file:./plastique"
+    "typescript": "3.6.2",
+    "@types/jquery": "3.3.31",
+    "vue-template-compiler": "2.6.10",
+    "jsdom": "15.1.1",
+    "glob": "7.1.4",
+    "pug-cli": "1.0.0-alpha6"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
