--- a/folder/package.json
+++ b/folder/package.json
@@ -1,27 +1,11 @@
 {
   "name": "one",
   "version": "1.0.0",
-  "description": "Typescript library based on vue.js, typescri[t and some utility classes",
-  "main": "index.js",
-  "devDependencies": {
-    "typescript": "3.6.2",
-    "@types/jquery": "3.3.31",
-    "vue-template-compiler": "2.6.10",
-    "jsdom": "15.1.1",
-    "glob": "7.1.4",
-    "pug-cli": "1.0.0-alpha6"
-  },
+  "description": "",
+  "main": "index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/codeplastique/reactive-plastique.git"
-  },
-  "author": "Bondarenko Artem",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/codeplastique/reactive-plastique/issues"
-  },
-  "homepage": "https://github.com/codeplastique/reactive-plastique#readme"
+  "author": "",
+  "license": "ISC"
 }
