--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Typescript library based on vue.js, typescri[t and some utility classes",
   "main": "index.js",
-  "devDependencies": {
+  "dependencies": {
     "one": "file:./folder",
     "two": "file:./plastique"
   },
