--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "1.0.0",
   "description": "Typescript library based on vue.js, typescri[t and some utility classes",
   "main": "index.js",
+  "devDependencies": {
+    "one": "file:one",
+    "two": "file:two"
+  },
   "dependencies": {
-    "one": "file:./folder",
-    "two": "file:./plastique"
+    "one": "file:one",
+    "two": "file:two"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
