--- a/package.json
+++ b/package.json
@@ -1,15 +1,11 @@
 {
-  "name": "one",
+  "name": "reactive-plastique",
   "version": "1.0.0",
   "description": "Typescript library based on vue.js, typescri[t and some utility classes",
   "main": "index.js",
-  "devDependencies": {
-    "one": "file:one",
-    "two": "file:two"
-  },
   "dependencies": {
-    "one": "file:one",
-    "two": "file:two"
+    "one": "file:../one",
+    "two": "file:../two"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
