--- a/package.json
+++ b/package.json
@@ -3,13 +3,8 @@
   "version": "1.0.0",
   "description": "Typescript library based on vue.js, typescri[t and some utility classes",
   "main": "index.js",
-  "devDependencies": {
-    "one": "file:one",
-    "two": "file:two"
-  },
   "dependencies": {
-    "one": "file:one",
-    "two": "file:two"
+    "@types/plastique": "git://github.com/codeplastique/types-plastique.git#4c46e13e9e62f324c0ab3267b7fd0023830fd546"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
