--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "plastique",
+  "version": "1.0.0",
   "description": "Typescript library based on vue.js, typescript and some utility classes",
   "main": "index.js",
   "scripts": {
