--- a/package.json
+++ b/package.json
@@ -6,6 +6,15 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "dependencies": {
+    "pug": "2.0.4",
+    "vue-template-compiler": "2.6.10",
+    "typescript": "3.2",
+    "@types/jquery": "3.3.31",
+    "webpack": "4.39.3",
+    "jsdom":"15.1.1",
+    "glob": "7.1.4"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/codeplastique/plastique.git"
