--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@types/jquery": "3.3.31",
     "webpack": "4.39.3",
     "jsdom":"15.1.1",
-    "glob": "7.1.4"
+    "glob": "7.1.4",
+    "properties-reader": "0.3.1"
   },
   "repository": {
     "type": "git",
