--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "pug": "2.0.4",
-    "vue-template-es2015-loader": "2.1.2",
+    "vue-template-compiler": "2.6.10",
     "typescript": "3.2",
     "@types/jquery": "3.3.31",
     "webpack": "4.39.3",
