--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "webpack": "4.39.3",
     "jsdom":"15.1.1",
     "glob": "7.1.4",
-    "properties-reader": "0.3.1"
+    "properties-reader": "0.3.1",
+    "abstract-syntax-tree": "2.5.0",
+    "uglify-js": "3.7.0"
   },
   "repository": {
     "type": "git",
