--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
     "pug": "2.0.4",
     "vue-template-compiler": "2.6.10",
     "typescript": "3.2",
-    "@types/jquery": "3.3.31",
     "webpack": "4.39.3",
     "jsdom":"15.1.1",
     "glob": "7.1.4",
     "properties-reader": "0.3.1",
     "abstract-syntax-tree": "2.5.0",
-    "uglify-js": "3.7.0"
+    "uglify-js": "3.7.0",
+    "mkdirp": "0.5.1"
   },
   "repository": {
     "type": "git",
