--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "pug": "2.0.4",
     "vue-template-compiler": "2.6.10",
     "typescript": "3.2",
     "webpack": "4.39.3",
@@ -15,8 +14,7 @@
     "glob": "7.1.4",
     "properties-reader": "0.3.1",
     "abstract-syntax-tree": "2.5.0",
-    "uglify-js": "3.7.0",
-    "mkdirp": "0.5.1"
+    "uglify-js": "3.7.0"
   },
   "repository": {
     "type": "git",
