--- a/package.json
+++ b/package.json
@@ -7,14 +7,15 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "vue-template-compiler": "2.6.10",
-    "typescript": "3.2",
-    "webpack": "4.39.3",
-    "jsdom":"15.1.1",
-    "glob": "7.1.4",
-    "properties-reader": "0.3.1",
+    "@types/node": "^13.13.4",
     "abstract-syntax-tree": "2.5.0",
-    "uglify-js": "3.7.0"
+    "glob": "7.1.4",
+    "jsdom": "15.1.1",
+    "properties-reader": "0.3.1",
+    "typescript": "3.2",
+    "uglify-js": "3.7.0",
+    "vue-template-compiler": "2.6.10",
+    "webpack": "4.39.3"
   },
   "repository": {
     "type": "git",
