--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,7 @@
         "module": "commonjs",
         "esModuleInterop": true,
         "allowSyntheticDefaultImports": true,
-        "target": "es2015",
-        "noImplicitAny": true,
+        "target": "ES2019",
         "moduleResolution": "node",
         "sourceMap": true,
         "outDir": "dist",
