--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "plastique",
-  "version": "1.0.0",
+  "version": "1.6.0",
   "description": "Typescript library based on vue.js, typescript and some utility classes",
   "main": "index.js",
   "scripts": {
@@ -9,8 +9,8 @@
   "dependencies": {
     "vue-template-compiler": "2.6.10",
     "typescript": "3.2",
-    "webpack": "4.39.3",
-    "jsdom":"15.1.1",
+    "webpack": "4.44.x",
+    "jsdom": "15.1.1",
     "glob": "7.1.4",
     "properties-reader": "0.3.1",
     "abstract-syntax-tree": "2.5.0",
