--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
   "name": "@plastique/core",
-  "version": "1.6.31",
+  "version": "1.6.33",
   "description": "Typescript library based on vue.js, typescript and some utility classes",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "vue-template-compiler": "2.6.10",
-    "typescript": "3.2",
-    "webpack": "4.44.x",
-    "jsdom": "15.1.1",
-    "glob": "7.1.4",
-    "properties-reader": "0.3.1",
     "abstract-syntax-tree": "2.5.0",
-    "uglify-js": "3.7.0"
+    "glob": "7.1.4",
+    "jsdom": "15.1.1",
+    "properties-reader": "0.3.1",
+    "typescript": "3.2",
+    "uglify-js": "3.7.0",
+    "vue-template-compiler": "2.6.10",
+    "webpack": "^4.44.2"
   },
   "repository": "git://github.com/codeplastique/plastique.git",
   "author": "Bondarenko Artem",
